--- a/package.xml
+++ b/package.xml
@@ -13,12 +13,10 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>laser_geometry</build_depend>
-  <run_depend>std_msgs</build_depend>
-  <run_depend>roscpp</build_depend>
-  <run_depend>libpcl-all</build_depend>
-  <run_depend>pcl_ros</build_depend>
-  <run_depend>nav_msgs</build_depend>
-  <run_depend>laser_geometry</build_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>libpcl-all</run_depend>
+  <run_depend>pcl_ros</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>laser_geometry</run_depend>
 </package>
-
-
