Add dependencies. Make SnapMapICP compile with PCL 1.7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,26 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(SnapMapICP)
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+	roscpp
+	laser_geometry
+	pcl_ros
+	tf
+)
 
-#find_package(catkin)
 find_package(Eigen REQUIRED)
 include_directories(${EIGEN_INCLUDE_DIRS})
 add_definitions(${EIGEN_DEFINITIONS})
+
+find_package(PCL REQUIRED)
+include_directories(${PCL_INCLUDE_DIRS})
+
+catkin_package()
 
 add_executable(SnapMapICP src/SnapMapICP.cpp)
 add_executable(TFpub src/TFpub.cpp)
 add_executable(FreezeCloud2 src/FreezeCloud2.cpp)
 
-target_link_libraries(TFpub FreezeCloud2 SnapMapICP)
+target_link_libraries(TFpub ${catkin_LIBRARIES})
+target_link_libraries(FreezeCloud2 ${catkin_LIBRARIES})
+target_link_libraries(SnapMapICP ${catkin_LIBRARIES} ${PCL_LIBRARIES})
