--- a/package.xml
+++ b/package.xml
@@ -12,12 +12,16 @@
   <build_depend>roscpp</build_depend>
   <build_depend>libpcl-all</build_depend>
   <build_depend>pcl_ros</build_depend>
+  <build_depend>pcl_conversions</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>laser_geometry</build_depend>
+  <build_depend>tf</build_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>libpcl-all</run_depend>
   <run_depend>pcl_ros</run_depend>
+  <run_depend>pcl_conversions</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>laser_geometry</run_depend>
+  <run_depend>tf</run_depend>
 </package>
