Adjust name to catkin naming conventions

--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <package>
-  <name>SnapMapICP</name>
+  <name>snap_map_icp</name>
   <description>SnapMapICP</description>
   <author>Thomas Ruehr</author>
   <license>BSD</license>
