--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,10 @@
 <package>
   <name>snap_map_icp</name>
-  <description>SnapMapICP</description>
+  <description>
+    snap_map_icp provides a ROS node relocalizing a ROS-enabled robot based on
+    it's base laser readings and matching them with the currently advertised
+    /map topic.
+  </description>
   <author>Thomas Ruehr</author>
   <license>BSD</license>
   <version>0.0.0</version>
