Finished rebranding of snap_map_icp for Groovy.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,12 +31,12 @@ add_definitions(${EIGEN_DEFINITIONS})
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
-rosbuild_add_executable(SnapMapICP src/SnapMapICP.cpp)
-rosbuild_add_executable(TFpub src/TFpub.cpp)
-rosbuild_add_executable(FreezeCloud2 src/FreezeCloud2.cpp)
+rosbuild_add_executable(snap_map_icp src/SnapMapICP.cpp)
+rosbuild_add_executable(tf_pub src/TFpub.cpp)
+rosbuild_add_executable(freeze_cloud2 src/FreezeCloud2.cpp)
 
 #target_link_libraries(example ${PROJECT_NAME})
 
-target_link_libraries(TFpub ${catkin_LIBRARIES})
-target_link_libraries(FreezeCloud2 ${catkin_LIBRARIES})
-target_link_libraries(SnapMapICP ${catkin_LIBRARIES})
+target_link_libraries(tf_pub ${catkin_LIBRARIES})
+target_link_libraries(freeze_cloud2 ${catkin_LIBRARIES})
+target_link_libraries(snap_map_icp ${catkin_LIBRARIES})
